--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
+    <title>Projeto CDA</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <nav id="navbar" class="navbar navbar-expand-lg ">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" style="color: aliceblue;">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a id="home" class="nav-link active" aria-current="page" href="#" style="color: aliceblue;">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: aliceblue;">TROCAS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" style="color: aliceblue;">SERVIÇOS</a>
+            </li>
+            <li class="nav-item">
+              <button class="nav-link"  aria-disabled="true" style="color: aliceblue;">Entrar</button>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div id="card" class="card mb-3" style="max-width: 540px;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="./1-ciclo-infinito-reciclagem-2-Photoroom.png-Photoroom.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h1 id="card1" class="card-title">Logística Reversa</h1>
+            <p id="card1" class="card-text">A Logística reversa é uma prática importante para pessoas que desejam agregar valor aoas materiais reciclaveis e gerar renda e contribuir para a sustentabilidade do meio ambiente.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="card2" class="card mb-3" style="max-width: 650px;">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="./1-ciclo-infinito-reciclagem-2-Photoroom.png-Photoroom.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h1 id="card1" class="card-title">RECICLAR É UM ATO DE SUSTENTABILIDADE</h1>
+            <p id="card1" class="card-text">Recilagem vai além de um ato de cuidado com o meio ambiente, é um compromisso com o futuro do nosso planeta. Ao transformar materiais descartados em novos produtos, diminuímos a necessidade de extrair recursos naturaias, preservando assim as florestas, os rios e os oceanos.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
